[package]
name = "host-turn-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crab_nat = "0.7.3"
ctrlc = "3.5.2"
futures = "0.3.32"
igd = { version = "0.12.1", features = ["aio"] }
netdev = "0.41.0"
simple_logger = "5.2.0"
tokio = { version = "1.51.1", features = ["io-util", "net", "time"] }
# tracing = "0.1.44"
turn-server = { version = "3.4.0", features = ["tcp", "udp", "api"] }
